--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://docs.google.com/forms/d/1mHB0QCb41ZwlQiFqZgZUgNvGvWoX_lAHieUkEAEI1wE/">
+        <meta http-equiv="refresh" content="1; url="https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA">
         <script type="text/javascript">
-            window.location.href = "https://docs.google.com/forms/d/1mHB0QCb41ZwlQiFqZgZUgNvGvWoX_lAHieUkEAEI1wE/"
+        
+            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA"
         </script>
         <title>Page Redirection</title>
     </head>
