--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url="https://docs.google.com/forms/d/1mHB0QCb41ZwlQiFqZgZUgNvGvWoX_lAHieUkEAEI1wE/">
+        <meta http-equiv="refresh" content="1; url="https://goo.gl/forms/Ew7JNwaswYDc5H693">
         <script type="text/javascript">
         
-            window.location.href = "https://docs.google.com/forms/d/1mHB0QCb41ZwlQiFqZgZUgNvGvWoX_lAHieUkEAEI1wE/"
+            window.location.href = "https://goo.gl/forms/Ew7JNwaswYDc5H693"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://docs.google.com/forms/d/1mHB0QCb41ZwlQiFqZgZUgNvGvWoX_lAHieUkEAEI1wE/'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://goo.gl/forms/Ew7JNwaswYDc5H693'>link to example</a>.
     </body>
 </html>
