--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url="https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA/viewform?usp=sf_link">
+        <meta https-equiv="refresh" content="1; url="https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA/viewform">
         <script type="text/javascript">
         
-            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA/viewform?usp=sf_link"
+            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA/viewform"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA/viewform?usp=sf_link'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://docs.google.com/forms/d/e/1FAIpQLSdhneKoT0T2s55a6z3lJTO9VVbse5iMqw0YqymudlnQkudZEA/viewform'>link to example</a>.
     </body>
 </html>
